--- a/src/layouts/LoginLayout.scss
+++ b/src/layouts/LoginLayout.scss
@@ -1,6 +1,6 @@
 @import '~antd/dist/antd.css';
 
-$body_padding: 100px;
+$body_padding: 120px;
 
 .login-layout {
     background: #253b62;
@@ -34,13 +34,16 @@ $body_padding: 100px;
             position: absolute;
             top: 50%;
             left: 20%;
-            p{
+
+            p {
                 color: #fff;
             }
+
             p:nth-last-of-type(2) {
                 font-size: 20px;
                 margin-bottom: 6px;
             }
+
             p:nth-last-of-type(1) {
                 font-size: 29px;
                 font-weight: 500;
@@ -49,40 +52,110 @@ $body_padding: 100px;
     }
 
     .ant-layout-footer {
-        height: 40px;
+        height: 44px;
         color: #fff;
         background: #253b62 !important;
         text-align: center;
         padding: 2px 0;
-        p{
+
+        p {
             font-size: 12px;
             color: #999999;
         }
     }
 
     .ant-divider {
-        border-top: 1px solid rgba(255,255,255,0.3);
+        border-top: 1px solid rgba(255, 255, 255, 0.3);
         margin: 0;
     }
-    p{
+
+    p {
         margin: 0;
         padding: 0;
     }
-      #normal_login .login-form-button {
+
+    #normal_login .login-form-button {
         width: 100%;
-      }
-      .login-other-options{
-        button:nth-of-type(1){
+    }
+
+    .login-other-options {
+        button:nth-of-type(1) {
             float: left;
         }
-        button:nth-of-type(2){
+
+        button:nth-of-type(2) {
             float: right;
         }
-        button{
+
+        button {
             padding: 0;
         }
-      }
+    }
+
+    .ant-menu a,
+    .ant-menu-horizontal>.ant-menu-submenu>.ant-menu-submenu-title {
+        font-size: 16px;
+    }
+
+    .ant-menu-horizontal>.ant-menu-submenu>.ant-menu-submenu-title:hover {
+        color: #fff;
+    }
+
+    //二维码
+    .qr-code {
+        text-align: center;
+
+        img {
+            width: 150px;
+            border: 1px solid #ddd;
+            padding: 8px;
+            margin-top: 7px;
+        }
+
+        .qr-code-status-success {
+            color: #367e70;
+        }
+
+        .qr-code-description {
+            width: 150px;
+            font-size: 10px;
+            color: #9E9E9E;
+            margin: 20px auto;
+        }
+    }
+
+    .manner-box {
+        height: 55px;
+    }
 }
-.ant-modal-content{
+
+.ant-modal-content {
     width: 370px;
+}
+
+.ant-tooltip-inner {
+    color: #B7B7B7 !important;
+    box-shadow: none;
+}
+
+.ant-tooltip-inner,
+.ant-tooltip-arrow-content {
+    border: 1px solid #dadada;
+}
+
+.ant-tooltip {
+    z-index: auto;
+}
+
+.ant-tabs-nav-list {
+    width: 100%;
+
+    .ant-tabs-tab {
+        width: 48%;
+        margin: 0 10px;
+
+        .ant-tabs-tab-btn {
+            margin: 0 auto;
+        }
+    }
 }
