--- a/src/routes/top/index.scss
+++ b/src/routes/top/index.scss
@@ -45,4 +45,7 @@ h4 {
 	table,table tr th, table tr td { border:1px solid #333; }
 	table tr td:last-child{text-align:left;padding-left:10px;}
     table { width:100%;text-align: center; border-collapse: collapse;margin:20px 0;} 
+    img {
+        width: 70%;
+    }
 }
