--- a/src/routes/top/index.scss
+++ b/src/routes/top/index.scss
@@ -49,3 +49,61 @@ h4 {
         width: 70%;
     }
 }
+//
+.guideIndex{
+    .guide-content{
+    padding: 10px 20px;
+    margin-left: 200px;
+    }
+    img{
+        margin: 0 20px 10px 20px;
+        width: 70%;
+    }
+    h1{
+        font-size: 22px;
+        line-height: 60px;
+    }
+    h2 {
+        font-size: 20px;
+        line-height: 50px;
+    }
+    h3 {
+        font-size: 18px;
+        line-height: 40px;
+    }
+    h4 {
+        font-size: 16px;
+        line-height: 32px;
+        /* text-indent: 2em; */
+    }
+    p {
+        font-size: 16px;
+        line-height: 30px;
+    }
+    ul{
+        list-style: none;
+        li {
+            font-size: 16px;
+            line-height: 26px;
+            /* text-indent: 4em; */
+        }
+    }
+    table{
+        width: 100%;
+        text-align: center;
+        border-collapse: collapse;
+        margin: 20px 0;
+        tr td:last-child{text-align:left;padding-left:50px;}
+        td{
+            font-size: 16px;
+            line-height: 50px;
+        }
+    }
+    table,table tr th, table tr td { border:1px solid #333; }
+    .item-box{
+        padding-left: 25px;
+    }
+.guide-title{
+    width:100%;text-align:center;font-size:30px;font-weight:700;line-height:120px;
+}
+}
