--- a/src/routes/assets/index.scss
+++ b/src/routes/assets/index.scss
@@ -8,7 +8,7 @@
 .detail-list-title{
     position: relative;
     padding-left: 10px;
-    line-height: 18px;
+    line-height: 30px;
     font-size: 16px;
     font-weight: bold;
 }
@@ -20,7 +20,7 @@
     border-radius: 5px;
     position: absolute;
     left: 2px;
-    top: 0px;
+    top: 6px;
 }
 //基本信息
 .detail-basic{
@@ -47,8 +47,16 @@
 //监控信息
 .detail-monitor{
     border-top: 1px solid #d7d7d7;
-    .detail-list-title{
-        margin-top: 16px;
+    .detail-monitor-top{
+        display: flex;
+        justify-content: space-between;
+        margin-top:32px;
+        a{
+            margin-right: 10px;
+        }
+        button{
+            margin-left: 10px;
+        }
     }
     .ant-card{
         margin-top: 16px;
