--- a/src/App.scss
+++ b/src/App.scss
@@ -37,3 +37,9 @@ border: none;
   float:right;
   padding-right: 15px;
 }
+.loginModel{
+  width: 421px !important;
+}
+.blue{
+  color: #00A0FF;
+}
