--- a/src/routes/top/index.scss
+++ b/src/routes/top/index.scss
@@ -57,6 +57,7 @@ h4 {
     .ant-layout-sider {
         background: #fff;
     }
+    background: #fff;
     .ant-layout-sider{
     box-shadow: 0 0 8px 0.2px #c1c1c1;
 }
