--- a/src/App.scss
+++ b/src/App.scss
@@ -49,3 +49,11 @@ border: none;
       padding: 0;
   }
 }
+//面包屑
+.ant-card-head-title{
+  font-size: 14px;
+  padding: 10px 0;
+}
+.ant-card-head{
+  min-height: 10px;
+}
