--- a/src/routes/assets/index.scss
+++ b/src/routes/assets/index.scss
@@ -1,10 +1,11 @@
 .detail{
+    //tab
 .ant-tabs-nav-list{
     width: 70%;
     .ant-tabs-tab{
         font-size: 16px;
     }
-}
+  }
 .detail-list-title{
     position: relative;
     padding-left: 10px;
